docs/book/samples/appc/spacing_check.out
error[formatting]: canonical form requires exactly one space here
  --> spacing_check.kso:1:7
   1 | answer=42
             ^
error[formatting]: canonical form requires exactly one space here
  --> spacing_check.kso:1:8
   1 | answer=42
              ^
